alignment issue fix

--- a/src/app/mainsitecomponents/service-provider/service-provider.component.css
+++ b/src/app/mainsitecomponents/service-provider/service-provider.component.css
@@ -25,7 +25,7 @@
   .banner-img {
     /* background: url("/../../../assets/Home Page _ Images/serviceProvider/Equal Oportunity1200.png"); */
     width: 100%;
-    height: 270px;
+    height: 400px;
     background-size: contain;
     background-repeat: no-repeat;
     margin-top: -50px;
@@ -82,6 +82,9 @@
     height: 2px;
     top: 45%;
     left: 47%;
+}
+.steps li.last{
+    padding-right: 0;
 }
 .steps li  .title {
     text-align: center;
